# interlink-crosschat

./: .dockerignore  .gitignore  README.md
ClientServer/: Dockerfile.client  Dockerfile.server  Program.cs  buildable project.sln  docker-compose.yml  server.java
ClientServer/JavaRMI/: Dockerfile.bridge  Dockerfile.client  Dockerfile.server  client.java  clientInterface.java  docker-compose.yml  rmi_bridge.java  server.java  serverInterface.java
ClientServer/node-frontend/: .env.example  Dockerfile  README.md  package-lock.json  package.json  server.js
ClientServer/node-frontend/public/: app.js  index.html  styles.css
ClientServer/node-frontend/scripts/: start-all-services.sh  start-deps.sh
ClientServer/pythonGRPC/: Dockerfile.client  Dockerfile.server  chat.proto  chat_pb2.py  chat_pb2_grpc.py  client.py  docker-compose.yml  server.py
ClientServer/rustClient/: Cargo.toml  Dockerfile
ClientServer/rustClient/src/: client.rs
ClientServer/rustServer/: Cargo.toml  Dockerfile
ClientServer/rustServer/src/: server.rs
