[package]
name = "rustClient"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1", features = ["full"] }   #runtime for asycn
serde = { version = "1.0", features = ["derive"] } # to serialize structs
serde_json = "1.0"  # json parser

[[bin]]
name="rust-client"
path="src/client.rs"
